     title screen
   * tiles with overlays are also properly shown if compiled with
     --enable-tinygui (bug #8720 patch #697)
 * language and i18n:
   * updated translations: Bulgarian, Dutch, Esperanto, French, German, Greek,
     Italian, Serbian, Spanish, Swedish
 * WML:
   * fixed the fire dragon die sound in TROW
   * fixed many agression->aggression typos
 * misc:
   * fixed beginning-of-scenario saves containing scenario WML (bug #8698)
   * fixed autosaves not getting deleted for last campaign scenario and
     multiplayer (bug #8762)
   * used valgrind to find some memory problems and fix bug #8715 and bug #8756

Version 1.2.3:
 * campaigns:
   * Heir to the Throne:
     * The Elvish Lord and Elvish High Lord have halo's again (patch #682)
 * graphics
   * items with a halo have their halo hidden when under a shroud (bug #8523)
   * updates the invisible icon of an unit when moving or moving the mouse 
     over the unit, then selecting the location to move to there are still
     glitches (partial fix for bug #8107)	 
   * fixed some cases where fog was updated without being redrawn
 * user interface:
   * made some tooltips visible again (bug #6702 and bug #8380)
 * multiplayer maps:
   * revised maps: Castle Hopping Isle
   * Wesbowl: the respawned units are fully healed again (bug #7776)
 * language and i18n:
   * udated translations: Czech, Danish, Dutch, Esperanto, French, German,
     Hungarian, Italian, Japanese, Polish, Portuguese (Brazil), Serbian, Slovak
   * new translations: Indonesian
 * WML engine
   * fixed era events not working on non hosts

Version 1.2.2:
 * campaigns:
   * Eastern Invasion:
     * The Crossing, fixed a bug which prevented the undead leader spawned 
       at turn 8 to have a keep
   * The South Guard:
     * fixed some pink unit images being shown in some scenario texts
   * Two Brothers
     * updated the portrait of Bjarn to match the new mage colors
 * editor
   * added the paste option to the edit menu