@@ -18,6 +18,7 @@ Version 1.2.3+svn:
  * WML:
    * fixed the fire dragon die sound in TROW
    * fixed many agression->aggression typos
+   * fixed [special_filter] not working properly (#8212)
  * misc:
    * fixed beginning-of-scenario saves containing scenario WML (bug #8698)
    * fixed autosaves not getting deleted for last campaign scenario and
